@@ -384,12 +384,13 @@ This is a ``to do'' list, not necessarily complete, for Csound and CsoundVST:
 \begin{enumerate}
 \item Get all the example scores working out of the box.
 \item Complete this document sufficiently to get users started building and running Csound and CsoundVST with MinGW and Linux.
-\item Get MIDI input and output working better on Windows.
+\item Get MIDI input and output working better on Windows (that is, a lower latency for PortAudio).
 \end{enumerate}
 \item Longer term:
 \begin{enumerate}
 \item Gabriel's Python opcodes.
 \item The Loris plugin opcodes.
+\item The ATS opcodes.
 \item The STK plugin opcodes.
 \item Investigate the Python runtime situation on MinGW.
 \end{enumerate}
